; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_testmodes.c_test_cmac.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_testmodes.c_test_cmac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"+~\15\16(\AE\D2\A6\AB\F7\15\88\09\CFO<\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"\BB\1Di)\E9Y7(\7F\A3}\12\9BugF\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"k\C1\BE\E2.@\9F\96\E9=~\11s\93\17*\00", align 1
@.str.4 = private unnamed_addr constant [17 x i8] c"\07\0A\16\B4kMAD\F7\9B\DD\9D\D0J(|\00", align 1
@.str.5 = private unnamed_addr constant [41 x i8] c"k\C1\BE\E2.@\9F\96\E9=~\11s\93\17*\AE-\8AW\1E\03\AC\9C\9E\B7o\ACE\AF\8EQ0\C8\1CF\A3\\\E4\11\00", align 1
@.str.6 = private unnamed_addr constant [17 x i8] c"\DF\A6gG\DE\9A\E600\CA2a\14\97\C8'\00", align 1
@.str.7 = private unnamed_addr constant [65 x i8] c"k\C1\BE\E2.@\9F\96\E9=~\11s\93\17*\AE-\8AW\1E\03\AC\9C\9E\B7o\ACE\AF\8EQ0\C8\1CF\A3\\\E4\11\E5\FB\C1\19\1A\0AR\EF\F6\9F$E\DFO\9B\17\AD+A{\E6l7\10\00", align 1
@.str.8 = private unnamed_addr constant [17 x i8] c"Q\F0\BE\BF~;\9D\92\FCIt\17y6<\FE\00", align 1
@.str.9 = private unnamed_addr constant [25 x i8] c"\8Es\B0\F7\DA\0EdR\C8\10\F3+\80\90y\E5b\F8\EA\D2R,k{\00", align 1
@.str.10 = private unnamed_addr constant [17 x i8] c"\D1}\DFF\AD\AA\CD\E51\CA\C4\83\DEz\93g\00", align 1
@.str.11 = private unnamed_addr constant [17 x i8] c"\9E\99\A7\BF1\E7\10\90\06b\F6^a|Q\84\00", align 1
@.str.12 = private unnamed_addr constant [17 x i8] c"\8A\1D\E5\BE.\B3\1A\AD\08\9A\82\E6\EE\90\8B\0E\00", align 1
@.str.13 = private unnamed_addr constant [17 x i8] c"\A1\D5\DF\0E\EDy\0FyMwX\96Y\F3\9A\11\00", align 1
@.str.14 = private unnamed_addr constant [33 x i8] c"`=\EB\10\15\CAq\BE+s\AE\F0\85}w\81\1F5,\07;a\08\D7-\98\10\A3\09\14\DF\F4\00", align 1
@.str.15 = private unnamed_addr constant [17 x i8] c"\02\89b\F6\1B{\F8\9E\FCkU\1FFg\D9\83\00", align 1
@.str.16 = private unnamed_addr constant [17 x i8] c"(\A7\02?E.\8F\82\BDK\F2\8D\8C7\C3\\\00", align 1
@.str.17 = private unnamed_addr constant [17 x i8] c"\AA\F3\D8\F1\DEV@\C22\F5\B1i\B9\C9\11\E6\00", align 1
@.str.18 = private unnamed_addr constant [17 x i8] c"\E1\99!\90T\9Fn\D5ij,\05l1T\10\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_cmac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_cmac() #0 {
  %1 = call i32 @check_cmac(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 16, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i32 0, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i32 16)
  %2 = call i32 @check_cmac(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 16, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i32 16, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0), i32 16)
  %3 = call i32 @check_cmac(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 16, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i64 0, i64 0), i32 40, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.6, i64 0, i64 0), i32 16)
  %4 = call i32 @check_cmac(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 16, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.7, i64 0, i64 0), i32 64, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.8, i64 0, i64 0), i32 16)
  %5 = call i32 @check_cmac(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i64 0, i64 0), i32 24, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i32 0, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.10, i64 0, i64 0), i32 16)
  %6 = call i32 @check_cmac(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i64 0, i64 0), i32 24, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i32 16, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.11, i64 0, i64 0), i32 16)
  %7 = call i32 @check_cmac(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i64 0, i64 0), i32 24, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i64 0, i64 0), i32 40, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.12, i64 0, i64 0), i32 16)
  %8 = call i32 @check_cmac(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i64 0, i64 0), i32 24, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.7, i64 0, i64 0), i32 64, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.13, i64 0, i64 0), i32 16)
  %9 = call i32 @check_cmac(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.14, i64 0, i64 0), i32 32, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i32 0, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.15, i64 0, i64 0), i32 16)
  %10 = call i32 @check_cmac(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.14, i64 0, i64 0), i32 32, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i32 16, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.16, i64 0, i64 0), i32 16)
  %11 = call i32 @check_cmac(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.14, i64 0, i64 0), i32 32, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i64 0, i64 0), i32 40, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.17, i64 0, i64 0), i32 16)
  %12 = call i32 @check_cmac(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.14, i64 0, i64 0), i32 32, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.7, i64 0, i64 0), i32 64, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.18, i64 0, i64 0), i32 16)
  ret void
}

declare dso_local i32 @check_cmac(i8*, i32, i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
